added card template

--- a/documentation/Requirements/Requirements.tex
+++ b/documentation/Requirements/Requirements.tex
@@ -5,6 +5,7 @@
 \usepackage{graphicx}   
 \usepackage{amssymb}
 \usepackage{tabularx}
+\usepackage{../latex/framed}
 \usepackage{hyperref}
 \hypersetup{
     colorlinks,
@@ -108,7 +109,18 @@
 \subsubsection{Individual Product Use Cases}
 
 \subsection{Functional Requirements}
-% TODO add req cards
+
+\begin{framed}
+	\noindent\textbf{Requirement \#}: -5 \hfill \textbf{Requirement Type}: F \hfill\\\\
+	\noindent\textbf{Description}: This is an example, TODO remove!  \\
+	\textbf{Rationale}: Why does this req exist, why is it REQUIRED? \\
+	\textbf{Fit Criterion}: When is it satisfied? \\\\
+	\textbf{Originator}: Christopher McDonald \\\\
+	\textbf{Priority}: High/Med/Low \hfill \\
+	\noindent\textbf{History}: Created 13-OCT-2017
+\end{framed}
+
+
 \section{Non-Functional Requirements}
 
 \subsection{Look and Feel Requirements}
