Added Team Vision section

--- a/documentation/Requirements/Requirements.tex
+++ b/documentation/Requirements/Requirements.tex
@@ -74,6 +74,7 @@
    \hline
    10/06/2017 & 0 & Made Template, added sections and comments & Christopher McDonald \\ \hline
    10/13/2017 & 1 & Added Overview and reviewed & Christopher McDonald \& Sharon Platkin \\ \hline
+   10/13/2017 & 2 & Added Team Vision section and reviewed Project Drivers section & Nisarg Patel \\ \hline
    \end{tabularx}
    \caption{Revision History}
 \end{figure}
@@ -81,7 +82,9 @@
 \newpage
 
 \section{Project Drivers}
-\subsection{The Purpose of the Project}
+\subsection{Team Vision}
+The SmartServe team envisions to provide Table Tennis enthusiasts with an eﬀective training solution which enables any player to improve their game with the help of modern technology and data analytics.
+\subsection{ Purpose}
 % should include problem, lack of current solutions and ideal solution
 When a player wants to improve their table tennis game, a typical solution is to hire a coach. However, this does not come without its challenges. These include scheduling, focusing on particular shots and receiving in-depth statistical feedback. Our solution to solve the above problem will consist of a shooting mechanism, a way to identify successful returns and a system to recommend different shots. Throughout the training session, the system will provide the user with feedback on the quality of their game. The system will consist of a electromechanical system to shoot the ball and a computer vision system to track the ball's location during flight. A server will also be added to store data, provide diagnostics and recommend shots given the user's past performance.
 \subsection{Stakeholders}
