--- a/documentation/Requirements/Requirements.tex
+++ b/documentation/Requirements/Requirements.tex
@@ -83,32 +83,32 @@
 
 \section{Project Drivers}
 \subsection{Team Vision}
-The SmartServe team envisions to provide Table Tennis enthusiasts with an eﬀective training solution which enables any player to improve their game with the help of modern technology and data analytics.
+The SmartServe team envisions to provide Table Tennis enthusiasts with an effective training solution which enables any player to improve their game with the help of modern technology and data analytics.
 \subsection{ Purpose}
 % should include problem, lack of current solutions and ideal solution
-When a player wants to improve their table tennis game, a typical solution is to hire a coach. However, this does not come without its challenges. These include scheduling, focusing on particular shots and receiving in-depth statistical feedback. Our solution to solve the above problem will consist of a shooting mechanism, a way to identify successful returns and a system to recommend different shots. Throughout the training session, the system will provide the user with feedback on the quality of their game. The system will consist of a electromechanical system to shoot the ball and a computer vision system to track the ball's location during flight. A server will also be added to store data, provide diagnostics and recommend shots given the user's past performance.
+When a player wants to improve their table tennis game, a typical solution is to hire a coach. However, this does not come without its challenges. Some of these challenges include scheduling, focusing on particular shots and receiving in-depth statistical feedback. Our proposed solution will consist of a shooting mechanism, a way to identify successful returns and a system to recommend different shots. Throughout the training session, the system will provide the user with crucial feedback on the quality of their game. The system will consist of a electromechanical system to shoot the ball and a computer vision system to track the ball's location during flight. A server will also be added to store data, provide diagnostics and recommend shots given the user's past performance.
 \subsection{Stakeholders}
 % include who ever will lose something if the project fails, dev team / project advisors, any sponsors we get (hatch / forge / thode makerspace)
 \subsubsection{The Client}
 % may omit, as we are the client
-The client for this project comprises of the development team since both the idea and the execution of the project will be preformed by them. It is also important to note the the project advisor, Dr. Alan Wassyng as well as his teaching assistants, will also be involved in the execution of the project to provide guidance and critique the work done by the team.
+The client for this project comprises of the core development team as both the idea and the project execution will be undertaken by the team. It is also important to note the the project adviser, Dr. Alan Wassyng as well as his teaching assistants, will also be involved in the project execution in order to provide guidance and critical feedback to the project team.
 \subsubsection{The Customers}
 % players or coaches 
-The primary customers of this project are table tennis players. The system should adapt to many playing styles and proficiencies, so segmenting those players down further is not necessary. They are more likely to play competitively, but could also play recreationally with friends or within a club focused around the sport. \\\\
-The secondary customers of this project are table tennis coaches. Although this system could replace a coach, a coach could find value in using this system to aid in training and assist more than one trainee at one time. The system will provide analytics which can be very useful when training someone over a long period of time.
+The primary customers of this project are table tennis players. Our proposed system will adapt to various playing styles and levels, and hence segmenting those players down further is not required. The primary customers are more likely to play competitively, but could also play recreationally with friends or within a club focused around the sport. \\\\
+The secondary customers of this project are table tennis coaches. Although this system could replace a coach, a coach could find value in using this system to aid in training and assist multiple players at one time. The system will provide analytics on players performance that can be very useful when training someone over a long period of time.
 % omitted > \subsubsection{Other Stakeholders}
 \subsection{Mandated Constraints}
 % anything which constrains our solutions from external parties
-The first constraint placed on the project is time. The deliverable dates and presentation dates have been set, with the last day commencing on April 28, 2018. There is also a budget constraint of \$750 for any parts needed to build the final product.
+The first constraint placed on the project is time. The deliverable dates and presentation dates have been set, with the last day commencing on April 28, 2018. Therefore, the team must successfully submit all of the deliverables and complete the project by April 28th, 2018. Additionally, a budget constraint of \$750 on the Bill of Materials (BOM) of the final product is also implied.
 % TODO add more
 \subsection{Naming Conventions and Terminology}
 % how we plan to name things
 The following terms and definitions will be used throughout this document:
 \begin{itemize}
-\item \textbf{System}: includes both the hardware and software aspects of the project
-\item \textbf{Team}: all members noted in the \textit{Authors} list
-\item \textbf{User Side}: the side of the table where the user is standing
-\item \textbf{System Side}: the side of the table where the mechanical system is placed
+\item \textbf{System}: includes both the hardware and software aspects of the project.
+\item \textbf{Team}: all members noted in the \textit{Authors} list.
+\item \textbf{User Side}: the side of the table where the user is standing.
+\item \textbf{System Side}: the side of the table where the mechanical system is placed.
 \end{itemize}
 \subsection{Relevant Facts and Assumptions}
 The regulation table size, as stated by the International Table Tennis Federation (ITTF), is as follows: 2.74m long, 1.525m wide and 0.76m off the ground. The table must be a uniformly dark colour with a 2cm-thick white line along the edge of the table, as well one running parallel to the 2.74m side in the middle of the table. The net in the middle of the table must be 15.25cm high. A 3D representation can be found in Figure \ref{fig:table-tennis-dim}.
