Clarified and changed the section headings

--- a/documentation/Requirements/Requirements.tex
+++ b/documentation/Requirements/Requirements.tex
@@ -74,7 +74,7 @@
    \hline
    10/06/2017 & 0 & Made Template, added sections and comments & Christopher McDonald \\ \hline
    10/13/2017 & 1 & Added Overview and reviewed & Christopher McDonald \& Sharon Platkin \\ \hline
-   10/13/2017 & 2 & Added Team Vision section and reviewed Project Drivers section & Nisarg Patel \\ \hline
+   10/13/2017 & 2 & Reviewed and Corrected Project Drivers section & Nisarg Patel \\ \hline
    \end{tabularx}
    \caption{Revision History}
 \end{figure}
@@ -82,17 +82,15 @@
 \newpage
 
 \section{Project Drivers}
-\subsection{Team Vision}
-The SmartServe team envisions to provide Table Tennis enthusiasts with an effective training solution which enables any player to improve their game with the help of modern technology and data analytics.
-\subsection{ Purpose}
+\subsection{Purpose}
 % should include problem, lack of current solutions and ideal solution
 When a player wants to improve their table tennis game, a typical solution is to hire a coach. However, this does not come without its challenges. Some of these challenges include scheduling, focusing on particular shots and receiving in-depth statistical feedback. Our proposed solution will consist of a shooting mechanism, a way to identify successful returns and a system to recommend different shots. Throughout the training session, the system will provide the user with crucial feedback on the quality of their game. The system will consist of a electromechanical system to shoot the ball and a computer vision system to track the ball's location during flight. A server will also be added to store data, provide diagnostics and recommend shots given the user's past performance.
-\subsection{Stakeholders}
+\subsection{Key Stakeholders}
 % include who ever will lose something if the project fails, dev team / project advisors, any sponsors we get (hatch / forge / thode makerspace)
-\subsubsection{The Client}
+\subsubsection{Client}
 % may omit, as we are the client
 The client for this project comprises of the core development team as both the idea and the project execution will be undertaken by the team. It is also important to note the the project adviser, Dr. Alan Wassyng as well as his teaching assistants, will also be involved in the project execution in order to provide guidance and critical feedback to the project team.
-\subsubsection{The Customers}
+\subsubsection{Typical Customers}
 % players or coaches 
 The primary customers of this project are table tennis players. Our proposed system will adapt to various playing styles and levels, and hence segmenting those players down further is not required. The primary customers are more likely to play competitively, but could also play recreationally with friends or within a club focused around the sport. \\\\
 The secondary customers of this project are table tennis coaches. Although this system could replace a coach, a coach could find value in using this system to aid in training and assist multiple players at one time. The system will provide analytics on players performance that can be very useful when training someone over a long period of time.
